First commited as before_14791_rev7