@@ -24,6 +24,7 @@ import org.eclipse.core.runtime.IProgressMonitor;
 import org.eclipse.core.runtime.IStatus;
 import org.eclipse.core.runtime.Status;
 import org.eclipse.core.runtime.SubMonitor;
+import org.eclipse.jface.databinding.swt.DisplayRealm;
 import org.eclipse.jface.databinding.swt.SWTObservables;
 import org.eclipse.jface.dialogs.MessageDialog;
 import org.eclipse.jface.layout.GridDataFactory;
@@ -53,7 +54,7 @@ import org.eclipse.ui.progress.IJobRunnable;
 
 /**
  * @since 3.3
- * 
+ *
  */
 public class TestBackgroundSaveEditor extends EditorPart implements
 		ISaveablesSource {
@@ -169,7 +170,7 @@ public class TestBackgroundSaveEditor extends EditorPart implements
 		}
 
 		public void setDirty(boolean dirty) {
-			firePropertyChange("dirty", new Boolean(this.dirty), new Boolean(
+			firePropertyChange("dirty", Boolean.valueOf(this.dirty), Boolean.valueOf(
 					this.dirty = dirty));
 			getSite().getShell().getDisplay().syncExec(new Runnable(){
 				@Override
@@ -205,7 +206,7 @@ public class TestBackgroundSaveEditor extends EditorPart implements
 
 	@Override
 	public void createPartControl(Composite parent) {
-		Realm realm = SWTObservables.getRealm(parent.getDisplay());
+		Realm realm = DisplayRealm.getRealm(parent.getDisplay());
 		final DataBindingContext dbc = new DataBindingContext(realm);
 		parent.addDisposeListener(new DisposeListener() {
 			@Override
@@ -253,7 +254,7 @@ public class TestBackgroundSaveEditor extends EditorPart implements
 				dirtyObservable, null, null);
 		// IObservableValue inputAndOutputDiffer = new ComputedValue(realm) {
 		// protected Object calculate() {
-		// return new Boolean(!Util.equals(inputObservable.getValue(),
+		// return Boolean.valueOf(!Util.equals(inputObservable.getValue(),
 		// outputObservable.getValue()));
 		// }
 		// };
@@ -329,9 +330,10 @@ public class TestBackgroundSaveEditor extends EditorPart implements
 	@Override
 	public void init(IEditorSite site, IEditorInput input)
 			throws PartInitException {
-		if (!(input instanceof IFileEditorInput))
+		if (!(input instanceof IFileEditorInput)) {
 			throw new PartInitException(
 					"Invalid Input: Must be IFileEditorInput");
+		}
 		setSite(site);
 		setInput(input);
 		this.input = input;
@@ -505,5 +507,5 @@ public class TestBackgroundSaveEditor extends EditorPart implements
 	public Saveable[] getSaveables() {
 		return new Saveable[] { mySaveable };
 	}
-	
+
 }
